[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
futures = "0.3.29"
uuid = { version =  "1.5.0", features = ["v4", "fast-rng"] }